--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>The Original Trombones</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://kit.fontawesome.com/fbab9ce383.js" crossorigin="anonymous"></script>
 </head>
